Applies correct expressive style to the Medical Write Permission Request screen.
Test: atest
Fix: 378469474
Flag: NONE settings
Change-Id: Ic41d7a8f92521d99b2355b74791b4399f9d7b41c

--- a/apk/res/layout/widget_health_setup_header_content_legacy.xml
+++ b/apk/res/layout/widget_health_setup_header_content_legacy.xml
@@ -33,7 +33,7 @@
         android:gravity="center_horizontal"
         android:layout_marginHorizontal="@dimen/spacing_large"
         android:paddingVertical="@dimen/spacing_large"
-        style="?attr/textAppearanceHeadline4" />
+        style="?attr/headerTitle" />
 
     <TextView
         android:id="@+id/summary"
