--- a/apk/res/layout/widget_health_setup_header_content_expressive.xml
+++ b/apk/res/layout/widget_health_setup_header_content_expressive.xml
@@ -23,7 +23,8 @@
         android:layout_height="@dimen/app_header_icon_size"
         android:contentDescription="@string/app_label"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/health_connect_logo"/>
+        android:background="@drawable/health_connect_logo"
+        android:backgroundTint="@color/settingslib_materialColorPrimary"/>
 
     <TextView
         android:id="@+id/title"
@@ -31,7 +32,7 @@
         android:layout_height="wrap_content"
         android:gravity="start"
         android:paddingVertical="@dimen/spacing_large"
-        style="?attr/textAppearanceHeadline4" />
+        style="?attr/headerTitle" />
 
     <TextView
         android:id="@+id/summary"
