Adds a revoke permissions button.
screenshot/AaBSJhS4wYBCF66.png (buttons enabled)
screenshot/3ADbu574sui8diM.png (buttons disabled)

Test: manual
Flag: TEST_ONLY
Bug: 394070828
Change-Id: I23a134f080fa094c35793687ad48ad08bedc1c51

--- a/testapps/toolbox/res/values/donottranslate_strings.xml
+++ b/testapps/toolbox/res/values/donottranslate_strings.xml
@@ -176,6 +176,7 @@
   <string name="history_read_permission">History read</string>
   <string name="background_read_permission">Background read</string>
   <string name="request_permissions">Request</string>
+  <string name="revoke_permissions">Revoke permissions</string>
   <!--endregion-->
 
 </resources>
