Add option to choose between data for different patients for PhrOptions
In a follow up I will add the data for Patient B and Patient C.

I'm also planning to add an option to select a local directory on the
device instead.

Bug: 397387599
Test: manual
Flag: EXEMPT test app changes only
Change-Id: I0f17fe42f49132cfb3f974c397a597a615885093

--- a/testapps/toolbox/res/values/donottranslate_strings.xml
+++ b/testapps/toolbox/res/values/donottranslate_strings.xml
@@ -148,6 +148,7 @@
 
   <!-- region Phr Options screen -->
   <string name="phr_options_read_immunization">Read PHR data</string>
+  <string name="phr_options_select_patient_title">Select patient context</string>
   <string name="phr_options_ingest_title">Insert PHR data</string>
   <string name="phr_options_create_data_source">Create data source</string>
   <string name="phr_options_data_source_id_placeholder">Create data source to see the id</string>
