--- a/testapps/toolbox/res/layout/fragment_phr_options.xml
+++ b/testapps/toolbox/res/layout/fragment_phr_options.xml
@@ -58,6 +58,22 @@
             android:layout_marginTop="38dp"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:text="@string/phr_options_select_patient_title" />
+
+        <Spinner
+            android:id="@+id/phr_patient_spinner"
+            android:layout_marginTop="18dp"
+            android:minWidth="250dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="38dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:text="@string/phr_options_ingest_title" />
 
         <Button
