Adds expressive theming to the search apps fragment.
Test: atest
Fix: 378467984
Flag: NONE settings
Change-Id: I6edff8eaf5a11593355e6eaca0411833533d4fb7

--- a/apk/res/values/attrs.xml
+++ b/apk/res/values/attrs.xml
@@ -33,6 +33,7 @@
     <attr name="seeAllCompatibleAppsIcon" format="reference"/>
     <attr name="sendFeedbackIcon" format="reference"/>
     <attr name="searchIcon" format="reference"/>
+    <attr name="emptySearchIcon" format="reference"/>
 
     <!-- Categories page -->
     <attr name="autoDeleteIcon" format="reference"/>
