--- a/testapps/toolbox/res/layout/fragment_phr_options.xml
+++ b/testapps/toolbox/res/layout/fragment_phr_options.xml
@@ -68,6 +68,15 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:id="@+id/phr_options_custom_path"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="18dp"
+            android:visibility="gone"
+            android:textSize="12sp" />
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -126,7 +135,7 @@
             android:layout_marginRight="18dp"
             android:minWidth="300dp"
             android:gravity="left"
-            android:text="@string/phr_options_pasted_resource_placeholder"
+            android:hint="@string/phr_options_pasted_resource_placeholder"
             android:textSize="12sp" />
 
     </LinearLayout>
