Keep track of created medical data sources
This change adds a data source spinner that can be used to select
from the created data sources

Bug: 396674766
Test: manual
Flag: EXEMPT changes to test app only
Change-Id: I648e181fc39814db7777e22fd06e05577068b427

--- a/testapps/toolbox/res/layout/fragment_phr_options.xml
+++ b/testapps/toolbox/res/layout/fragment_phr_options.xml
@@ -93,15 +93,12 @@
             android:minWidth="250dp"
             android:text="@string/phr_options_create_data_source" />
 
-        <EditText
-            android:id="@+id/phr_data_source_id_text"
+        <Spinner
+            android:id="@+id/phr_data_source_spinner"
+            android:layout_marginTop="18dp"
+            android:minWidth="250dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:gravity="center"
-            android:text="@string/phr_options_data_source_id_placeholder"
-            android:visibility="gone"
-            android:textSize="12sp" />
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/phr_seed_fhir_jsons_button"
