AppDataFragment zero state
https://hsv.googleplex.com/6645051944861696

Bug: 377663416
Test: atest
Flag: NONE handled by expressive theming
Change-Id: Ic618ee9df96c4428efebdddb636357196ccae0b6

--- a/apk/res/xml/app_data_screen.xml
+++ b/apk/res/xml/app_data_screen.xml
@@ -27,6 +27,11 @@
         android:key="key_permission_types"/>
     <com.android.healthconnect.controller.shared.preference.NoDataPreference
         app:isPreferenceVisible="false"/>
+    <com.android.settingslib.widget.ZeroStatePreference
+        android:key="zero_state_preference"
+        android:title="@string/no_data"
+        android:icon="?attr/databaseIcon"
+        app:isPreferenceVisible="false"/>
     <com.android.settingslib.widget.FooterPreference
         android:key="key_footer"
         app:isPreferenceVisible="false"/>
