Update No compatible apps string and add ZeroState
The new string can be used in both expressive and non expressive cases.

https://hsv.googleplex.com/4825765672648704

Bug: 377663416
Test: atest
Flag: NONE handled by expressive theming
Change-Id: I830a867817fd23e062c4442aa5473f733b567f3e

--- a/apk/res/xml/connected_apps_screen.xml
+++ b/apk/res/xml/connected_apps_screen.xml
@@ -19,6 +19,11 @@
     <com.android.settingslib.widget.TopIntroPreference
         android:order="0"
         android:key="connected_apps_top_intro"/>
+    <com.android.settingslib.widget.ZeroStatePreference
+        android:key="zero_state_preference"
+        android:title="@string/connected_apps_empty_list_section_title"
+        android:icon="?attr/appsIcon"
+        app:isPreferenceVisible="false"/>
     <com.android.settingslib.widget.BannerMessagePreferenceGroup
         android:key="banner_group"
         app:expandTitle="@string/banner_group_more_items"
