Update health permission names on v36
This CL updates the health permission group name from "Health Connect" to "Health, fitness and wellness".
Updates a few headers and brands.

See details in go/update-health-permissions-name-one-pager
Old strings will preserve before v36 images.

Bug: 398254036
Flag: EXEMPT guard by build version instead of trunkstable feature flag
Test: atest HealthConnectControllerTest. Manual testing on new v36 image and on mainline updates to v34 image.
Change-Id: I7ed33322312194493b238434769759d099e6394f

--- a/apk/res/navigation/settings_nav_graph.xml
+++ b/apk/res/navigation/settings_nav_graph.xml
@@ -39,7 +39,7 @@
     <fragment
         android:id="@+id/settingsManagePermissionFragment"
         android:name="com.android.healthconnect.controller.permissions.connectedapps.SettingsManagePermissionFragment"
-        android:label="@string/app_label">
+        android:label="@string/settings_manage_permission">
         <action
             android:id="@+id/action_settingsManagePermission_to_settingsCombinedPermissions"
             app:destination="@id/settingsCombinedPermissionsFragment" />
@@ -54,7 +54,7 @@
     <fragment
         android:id="@+id/settingsCombinedPermissionsFragment"
         android:name="com.android.healthconnect.controller.permissions.app.SettingsCombinedPermissionsFragment"
-        android:label="@string/app_label">
+        android:label="@string/settings_combined_permissions">
         <argument
             android:name="android.intent.extra.PACKAGE_NAME"
             app:argType="string" />
@@ -72,7 +72,7 @@
     <fragment
         android:id="@+id/settingsFitnessAppFragment"
         android:name="com.android.healthconnect.controller.permissions.app.SettingsFitnessAppFragment"
-        android:label="@string/app_label">
+        android:label="@string/settings_fitness_permissions">
         <argument
             android:name="android.intent.extra.PACKAGE_NAME"
             app:argType="string" />
@@ -83,7 +83,7 @@
     <fragment
         android:id="@+id/settingsMedicalAppFragment"
         android:name="com.android.healthconnect.controller.permissions.app.SettingsMedicalAppFragment"
-        android:label="@string/app_label">
+        android:label="@string/settings_medical_permissions">
         <argument
             android:name="android.intent.extra.PACKAGE_NAME"
             app:argType="string" />
