Adds expressive theming to the Export Frequency screen.
Legacy: https://hsv.googleplex.com/6689102538735616
Expressive: https://hsv.googleplex.com/4828959047942144

Test: atest
Bug: 378469072
Flag: NONE settings
Change-Id: I67436554df7aeba43079e91639b458616d12b2fe

--- a/apk/res/layout/widget_health_setup_header_content_expressive.xml
+++ b/apk/res/layout/widget_health_setup_header_content_expressive.xml
@@ -23,7 +23,6 @@
         android:layout_height="@dimen/app_header_icon_size"
         android:contentDescription="@string/app_label"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/health_connect_logo"
         android:backgroundTint="@color/settingslib_materialColorPrimary"/>
 
     <TextView
@@ -39,7 +38,6 @@
         android:gravity="start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?attr/textAppearanceSummaryLarge"
-        android:paddingBottom="@dimen/spacing_normal"
+        android:textAppearance="?attr/headerSummary"
         android:visibility="gone"/>
 </LinearLayout>
