Replace drag and drop functionality with popup menu for priority list
No need for recyclerview, we can use a PreferenceCategory instead.

Expressive: https://drive.google.com/file/d/1L0z4_k2H6-fA2osv5VUudBTzQ7Zl9Vyu/view?usp=sharing&resourcekey=0-Vp5l6ortPQ9t79DVK7yLNw
Legacy: https://drive.google.com/file/d/1ldbO6qHB8d6-WoVjVxpbZX8ma-lM2pqv/view?usp=sharing&resourcekey=0-FUBpvl1Ud0Bgw211kmsCmA

Fix: 361557270
Bug: 378468481
Test: atest
Flag: NONE Guarded by expressive theming
Change-Id: If96c6a547837f086f84af91fd6e5c00f3cc46c34

--- a/apk/res/layout/widget_app_source_layout_legacy.xml
+++ b/apk/res/layout/widget_app_source_layout_legacy.xml
@@ -28,7 +28,7 @@
         android:layout_height="match_parent"
         android:minHeight="@dimen/app_header_icon_size"
         android:minWidth="@dimen/app_header_icon_size"
-        android:layout_marginEnd="@dimen/spacing_data_entries"
+        android:layout_margin="@dimen/spacing_data_entries"
         android:layout_gravity="center_vertical">
 
         <TextView
@@ -67,7 +67,6 @@
             android:maxLines="1"
             android:visibility="gone"
             android:textAppearance="?attr/textAppearanceSummary" />
-
     </LinearLayout>
 
     <FrameLayout
@@ -75,9 +74,11 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="0.32"
+        android:minHeight="@dimen/app_header_icon_size"
         android:minWidth="@dimen/button_size"
         android:paddingStart="0dp"
         android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
+        android:layout_margin="@dimen/spacing_data_entries"
         android:layout_gravity="center_vertical">
 
         <ImageView
@@ -86,9 +87,7 @@
             android:layout_gravity="center_vertical|end"
             android:longClickable="false"
             android:id="@+id/action_icon_background"
-            android:minHeight="@dimen/icon_size"
-            android:minWidth="@dimen/icon_size"
-            android:background="?attr/priorityItemDragIcon"/>
+            android:background="?attr/moreVertIcon"/>
     </FrameLayout>
 
 </LinearLayout>
