--- a/apk/res/values/attrs.xml
+++ b/apk/res/values/attrs.xml
@@ -88,6 +88,7 @@
     <attr name="editIcon" format="reference"/>
     <attr name="closeIcon" format="reference"/>
     <attr name="appsIcon" format="reference"/>
+    <attr name="moreVertIcon" format="reference"/>
 
     <!-- Backup and restore -->
     <attr name="uploadIcon" format="reference"/>
