--- a/apk/res/values/styles.xml
+++ b/apk/res/values/styles.xml
@@ -269,4 +269,10 @@
         <item name="tabTextAppearance">?attr/textAppearanceSubheader</item>
     </style>
 
+    <style name="Widget.HealthConnect.PopUpMenu" parent="@style/Widget.AppCompat.PopupMenu">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">?android:attr/textColorSecondary</item>
+        <item name="dropdownListPreferredItemHeight">48dp</item>
+    </style>
+
 </resources>
