Revert "Fix a11y bug losing focus after changing menu item list"
Revert submission 31995051

Reason for revert: DroidMonitor: Potential culprit for http://b/400680390 - verifying through ABTD before revert submission. This is part of the standard investigation process, and does not mean your CL will be reverted.

Reverted changes: /q/submissionid:31995051

Change-Id: I511faa3ac4396db34ba8950b037cba81932f8d0e

--- a/apk/res/menu/all_data_menu.xml
+++ b/apk/res/menu/all_data_menu.xml
@@ -21,7 +21,7 @@
         android:showAsAction="always|collapseActionView"
         android:title="@string/data_sources_and_priority_title"/>
     <item
-        android:id="@+id/menu_delete"
+        android:id="@+id/menu_enter_deletion_state"
         android:icon="?attr/deleteForeverIcon"
         android:showAsAction="always|collapseActionView"
         android:title="@string/enter_deletion_button_content_description"/>
