--- a/apk/res/layout/widget_health_setup_header_content_legacy.xml
+++ b/apk/res/layout/widget_health_setup_header_content_legacy.xml
@@ -22,7 +22,8 @@
         android:id="@+id/icon"
         android:layout_width="@dimen/app_header_icon_size"
         android:layout_height="@dimen/app_header_icon_size"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/health_connect_logo"/>
 
     <TextView
         android:id="@+id/title"
@@ -30,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
+        android:layout_marginHorizontal="@dimen/spacing_large"
         android:paddingVertical="@dimen/spacing_large"
         style="?attr/headerTitle" />
 
@@ -39,7 +41,7 @@
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?attr/headerSummary"
+        android:textAppearance="?attr/textAppearanceSummaryLarge"
         android:paddingBottom="@dimen/spacing_normal"
         android:visibility="gone"/>
 
