Fix padding in entries screen
center the elements in list

Bug: 378467998
Flag: NONE clean up
Test: atest HealthConnectControllerUITests
Change-Id: I6357c18934f0d16da2d846b8e4e4c7be59c7c632

--- a/apk/res/layout/item_exercise_session_entry_new_ia.xml
+++ b/apk/res/layout/item_exercise_session_entry_new_ia.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (C) 2024 The Android Open Source Project
+  ~ Copyright (C) 2025 The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -13,8 +13,6 @@
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
-  ~
-  ~
   -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -34,11 +32,10 @@
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="@dimen/timeline_divider_margin_start"
         android:orientation="vertical"
         app:layout_constrainedWidth="true"
         app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginEnd="@dimen/spacing_large">
+        android:paddingVertical="@dimen/spacing_normal">
 
         <TextView
             android:id="@+id/item_data_entry_header"
