--- a/apk/res/layout/item_select_all.xml
+++ b/apk/res/layout/item_select_all.xml
@@ -1,49 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  Copyright (C) 2024 The Android Open Source Project
-
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-
-       http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
+  ~ Copyright (C) 2025 The Android Open Source Project
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~      http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/item_select_all_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="@dimen/spacing_large"
-    android:paddingBottom="@dimen/spacing_large">
-    <LinearLayout
-        android:layout_width="wrap_content"
+    android:orientation="horizontal"
+    android:paddingVertical="@dimen/spacing_normal"
+    android:paddingStart="?android:attr/listPreferredItemPaddingStart">
+
+    <TextView
+        android:id="@+id/select_all_text"
+        style="?attr/textAppearanceItem"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="vertical"
-        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
-        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd">
-
-        <TextView
-            android:id="@+id/select_all_text"
-            style="?attr/textAppearanceItem"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/select_all"/>
-
-    </LinearLayout>
+        android:text="@string/select_all" />
 
     <CheckBox
         android:id="@+id/item_checkbox_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
         android:layout_gravity="center_vertical"
-        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
+        android:layout_weight="0"
         android:background="?android:attr/selectableItemBackground"
+        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
         android:scaleType="center"
-        android:src="?attr/checkboxUncheckedIcon"/>
+        android:src="?attr/checkboxUncheckedIcon" />
 </LinearLayout>
