--- a/apk/res/layout/item_series_data_entry_new_ia.xml
+++ b/apk/res/layout/item_series_data_entry_new_ia.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (C) 2024 The Android Open Source Project
+  ~ Copyright (C) 2025 The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -13,8 +13,6 @@
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
-  ~
-  ~
   -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -23,7 +21,8 @@
     android:gravity="center_vertical"
     android:paddingStart="?android:attr/listPreferredItemPaddingStart"
     android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-    android:clipToPadding="false">
+    android:clipToPadding="false"
+    android:paddingVertical="@dimen/spacing_normal">
 
     <RelativeLayout
         android:id="@+id/item_data_entry_container"
@@ -31,8 +30,7 @@
         android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
-        android:layout_weight="1"
-        android:paddingTop="@dimen/spacing_large">
+        android:layout_weight="1">
 
         <TextView
             android:id="@+id/item_data_entry_header"
