Fix padding issues for select all and aggregations
Bug: 378470206
Bug: 378467998
Bug: 378468465

Flag: NONE clean up
Test: NONE xml changes

screenshots after the changes
https://hsv.googleplex.com/6217436813590528
https://hsv.googleplex.com/6526800086695936
https://hsv.googleplex.com/4697212738076672
https://hsv.googleplex.com/4697212738076672

Change-Id: Ic71c2fb09e9cf0f572d18d2c57bcda4fc7887635

--- a/apk/res/layout/item_data_aggregation.xml
+++ b/apk/res/layout/item_data_aggregation.xml
@@ -16,15 +16,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_weight="1"
     android:orientation="vertical"
     android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
-    android:paddingVertical="@dimen/spacing_normal">
+    android:paddingStart="?android:attr/listPreferredItemPaddingStart">
 
     <TextView
         android:id="@+id/item_data_aggregation"
         android:textAppearance="?attr/textAppearanceHeadline3"
+        android:paddingTop="@dimen/spacing_normal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -32,6 +31,7 @@
         android:id="@+id/item_data_origin_apps"
         android:textAppearance="?attr/textAppearanceSummary"
         android:layout_width="match_parent"
+        android:paddingBottom="@dimen/spacing_normal"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
